build: add build files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,7 @@ services:
     container_name: rust-web-app
     build: ./docker
     image: rust-web-app:latest
+    ports:
+      - 8000:8000
     volumes:
-      - ./src:/opt/app
+      - ./:/opt/app
