--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,3 +1,9 @@
 FROM rust:1.30-slim
 
+RUN rustup update nightly \
+ && rustup default nightly
+
+ENV USER=root
+WORKDIR /opt/app
+
 CMD [ "tail", "-f", "/dev/null" ]
