build: fixed version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,10 @@ name = "web"
 version = "0.1.0"
 
 [dependencies]
-rocket = "*"
-rocket_codegen = "*"
-rocket_contrib = { version = "*", features = ["json"] }
+rocket = "0.3.17"
+rocket_codegen = "0.3.17"
+rocket_contrib = { version = "0.3.17", features = ["json"] }
 
-serde = "*"
-serde_json = "*"
-serde_derive = "*"
+serde = "1.0.80"
+serde_json = "1.0.80"
+serde_derive = "1.0.33"
