--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,8 @@ name = "web"
 version = "0.1.0"
 
 [dependencies]
-rocket = "0.3.17"
-rocket_codegen = "0.3.17"
-rocket_contrib = { version = "0.3.17", features = ["json"] }
+rocket = "0.4.1"
+rocket_contrib = { version = "0.4.1", features = ["json"] }
 
-serde = "1.0.80"
-serde_json = "1.0.33"
-serde_derive = "1.0.80"
+serde = { version = "1.0.92", features = ["derive"] }
+
